--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
   justify-content: center;
   font-size: calc(0px + 2vmin);
   color: white;
-  padding: 138.5px;
+  padding: 72.5px;
 }
 
 .App-link {
@@ -56,26 +56,26 @@
   background-color: rgb(239, 247, 247);
   margin: 0px auto;
   border-radius: 8px;
-  padding: 90px;
+  padding: 40px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   font-size: larger;
   color: black;
 }
 .input {
-  width: 300px;
+  width: 194px;
   height: 0px;
   background-color: rgb(250, 249, 249);
-  margin-left: 90px;
+  margin-left: 78px;
   border-radius: 10px;
-  padding: 30px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  font-size: 20px;
+  padding: 19px;
+  box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%), 0 6px 20px 0 rgb(0 0 0 / 19%);
+  font-size: 13px;
 }
 .font {
   font-size: 25px;
   font-family: "Times New Roman", Times, serif;
   font-weight: 100;
-  font-size: 25px;
+  font-size: 20px;
   color: black;
   display: block ruby;
 }
@@ -101,7 +101,7 @@
   background-image: linear-gradient(#04aa6d 0%, #04aa6d 100%);
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.29);
   border-bottom: solid 4px #0a0a09;
-  margin-left: 254px;
+  margin-left: 175px;
   margin-top: 70px;
   font-size: 20px;
   cursor: pointer;
@@ -109,18 +109,17 @@
 }
 .card {
   background-color: white;
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.29);
+  box-shadow: 0px 1px 1px rgb(0 0 0 / 29%);
   border-bottom: solid 4px #0a0a09;
-  width: 620px;
-  height: 200px;
+  width: 402px;
+  height: 204px;
   margin-left: 20px;
   margin-top: 100px;
   border-radius: 15px;
-  box-shadow: 0 10px 8px 0 rgba(29, 28, 28, 0.2),
-    0 6px 30px 0 rgba(0, 0, 0, 0.19);
+  box-shadow: 0 10px 8px 0 rgb(29 28 28 / 20%), 0 6px 30px 0 rgb(0 0 0 / 19%);
   display: inline-block;
-  padding: 78px;
-  font-size: 30px;
+  padding: 48px;
+  font-size: 26px;
   color: black;
   cursor: pointer;
 }
@@ -164,7 +163,7 @@ th {
   background-color: #dff3f7;
 }
 #lightmode {
-  background-color: white;
+  background-color: #dff3f7;
   color: black;
 }
 #dark {
@@ -186,8 +185,10 @@ th {
 }
 
 #dark .main_div {
-  background-color: rgb(39, 39, 39);
+  background-color: rgb(11, 10, 10);
+
 }
+
 #dark .font {
   color: white;
 }
@@ -298,7 +299,7 @@ li a.active {
 .toggle_switch {
   margin-right: 2451px;
   /* width: 50px; */
-  font-size: 30px;
+  font-size: 21px;
   color: white;
 }
 /* .toggle_switch label{
@@ -311,13 +312,28 @@ li a.active {
   color: rgb(3, 3, 3);
 }
 #dark .input {
-  width: 300px;
+  
+  width: 194px;
   height: 0px;
-  background-color: rgb(20 18 18);
-  margin-left: 90px;
+  background-color: rgb(44, 42, 42);
+  margin-left: 78px;
   border-radius: 10px;
-  padding: 30px;
-  box-shadow: 0 4px 8px 0 rgb(231 220 220 / 41%), 0 6px 20px 0 rgb(0 0 0 / 19%);
-  font-size: 20px;
+  padding: 19px;
+  box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%), 0 6px 20px 0 rgb(0 0 0 / 19%);
+  font-size: 13px;
+}
+.css-hyum1k-MuiToolbar-root {
+  min-height: 64px;
+  background-color: #bde7f3;
+}
+#dark .css-hyum1k-MuiToolbar-root{
+  background-color: #525454;
   color: white;
+
+}
+#dark .css-i4bv87-MuiSvgIcon-root{
+  color: rgb(7, 7, 7);
+}
+#dark  #tr:nth-child(even){
+  background-color: #706d6d
 }
