--- a/src/App.css
+++ b/src/App.css
@@ -163,7 +163,7 @@ th {
   background-color: #dff3f7;
 }
 #lightmode {
-  background-color: #dff3f7;
+  background-color: #edf5f7;
   color: black;
 }
 #dark {
@@ -336,4 +336,47 @@ li a.active {
 }
 #dark  #tr:nth-child(even){
   background-color: #706d6d
+}
+#dark .rbc-btn-group > button:not(:first-child):not(:last-child) {
+  border-radius: 0;
+  color: white;
+}
+#dark .rbc-btn-group > button:first-child:not(:last-child) {
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+  color: white;
+}
+#dark .rbc-btn-group > button:last-child:not(:first-child) {
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+  color: white;
+}
+#dark .rbc-date-cell.rbc-now {
+  font-weight: bold;
+  color: black;
+}
+#lightmode .rbc-month-view {
+  border: 1.5px solid #080707;
+}
+#lightmode .rbc-event, .rbc-day-slot .rbc-background-event {
+  border: none;
+  box-sizing: border-box;
+  box-shadow: none;
+  margin: 0;
+  padding: 2px 5px;
+  background-color: #79b8c9;
+  border-radius: 5px;
+  color: #fafbfb;
+  cursor: pointer;
+  width: 100%;
+  text-align: left;
+}
+#dark .rbc-toolbar button:active, .rbc-toolbar button.rbc-active {
+  background-image: none;
+  box-shadow: inset 0 3px 5px rgb(0 0 0 / 13%);
+  background-color: #343434;
+  border-color: #adadad;
+}
+#dark .rbc-event, .rbc-day-slot .rbc-background-event{
+  background-color: #1f1f20;;
 }
